--- a/index.html
+++ b/index.html
@@ -1,40 +1,148 @@
 <!doctype html>
 <html class="no-js" lang="">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+	<head>
+		<meta charset="utf-8">
+		<meta http-equiv="x-ua-compatible" content="ie=edge">
+		<title>Teechers App - The simple &amp; focused class manager.</title>
+		<meta name="description" content="">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel="apple-touch-icon" href="apple-touch-icon.png">
-        <!-- Place favicon.ico in the root directory -->
+		<link rel="apple-touch-icon" href="apple-touch-icon.png">
+		<!-- Place favicon.ico in the root directory -->
 
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/main.css">
-        <script src="js/vendor/modernizr-2.8.3.min.js"></script>
-    </head>
-    <body>
-        <!--[if lt IE 8]>
-            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
+		<link rel="stylesheet" href="css/normalize.css">
+		<link rel="stylesheet" href="css/bootstrap.min.css">
+		<link rel="stylesheet" href="css/main.css">
+		<script src="js/vendor/modernizr-2.8.3.min.js"></script>
+	</head>
+	<body>
+		<!--[if lt IE 8]>
+			<p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+		<![endif]-->
 
-        <!-- Add your site or application content here -->
-        <p>Hello world! This is HTML5 Boilerplate.</p>
+		<!-- Add your site or application content here -->
+		
+		<!-- Header: Photo, iPhone, icon, title -->
+		<div class="header-bg">
 
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.3.min.js"><\/script>')</script>
-        <script src="js/plugins.js"></script>
-        <script src="js/main.js"></script>
+			<header class="container">
 
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <script>
-            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-            e.src='https://www.google-analytics.com/analytics.js';
-            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','UA-XXXXX-X','auto');ga('send','pageview');
-        </script>
-    </body>
+				<!-- Background & iPhone container -->
+				<div class="row">
+
+					<!-- iPhone & captures -->
+					<div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4">
+						<div>
+							iPhone and capture
+						</div>
+					</div>
+
+				</div>
+
+				<!-- Text content -->
+				<div class="row">
+					
+					<div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4">
+						
+						<!-- icon and title -->
+						<div>
+							icon <br>
+							<h1>Teechers App</h1>
+						</div>
+
+						<h2>The simple and focused class manager</h2>
+
+						<a href="#">Coming Soon</a>
+					</div>
+
+				</div>
+
+			</header>
+
+		</div>
+
+		<!-- Container: Features -->
+		<content id="features" class="container">
+			
+			<div class="row">
+
+				<article class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-0 col-md-3">
+					<img src="" alt="">
+					<h3>Quick Attendance</h3>
+					<p>The most mundane task, now simplified and faster than ever. Take attendance straight into Teechers app.</p>
+				</article>
+
+				<article class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-0 col-md-3">
+					<img src="" alt="">
+					<h3>Good Grades</h3>
+					<p>Keep track of all your students’ grades. Review and edit at any moment.</p>
+				</article>
+
+				<article class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-0 col-md-3">
+					<img src="" alt="">
+					<h3>Always with You</h3>
+					<p>Don’t mind paper, don’t mind complex systems, keep all your data with you, safe, on your smartphone at all times.</p>
+				</article>
+
+				<article class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-0 col-md-3">
+					<img src="" alt="">
+					<h3>Easy in - Easy out</h3>
+					<p>Import your students’ names in a split, and share your class data just as fast in both PDF and spreadsheet format.</p>
+				</article>
+
+			</div>
+
+		</content>
+
+		<!-- Footer: Invitation to newsletter, link to numeral -->
+		<div class="footer-bg">
+
+			<footer class="container">
+
+				<div class="row">
+
+					<!-- Text for newsletter -->
+					<div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4">
+
+						<h2>We are coming soon</h2>
+						<p>Subscribe to our newsletter and we’ll let you know when we’ll be getting to the App Store. (We will never spam you, teacher’s word)</p>
+
+						<!-- Newsletter invitation -->
+						<div></div>
+
+					</div>
+
+				</div>
+
+				<!-- Footer -->
+				<div class="row">
+
+					<div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4">
+						<a href="#">numeral.cc</a>
+					</div>
+
+				</div>
+
+			</footer>
+
+		</div>
+
+
+
+
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+		<script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.3.min.js"><\/script>')</script>
+		<script src="js/plugins.js"></script>
+		<script src="js/main.js"></script>
+
+		<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+		<script>
+			(function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
+			function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
+			e=o.createElement(i);r=o.getElementsByTagName(i)[0];
+			e.src='https://www.google-analytics.com/analytics.js';
+			r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
+			ga('create','UA-XXXXX-X','auto');ga('send','pageview');
+		</script>
+	</body>
 </html>
