--- a/index.html
+++ b/index.html
@@ -26,19 +26,21 @@
 		<!-- Header background: Photo, iPhone -->
 		<div class="photo-bg">
 
-			<div class="container">
+			<div id="phoneContainer">
+				
+				<div id="phoneContent">
 
-				<div class="row">
-
-					<div id="iPhoneContainer" class="col-xs-12">
-						iphone and animation
-					</div>
+					<img src="img/iphone-capture.png" alt="Teechers App">
 
 				</div>
 
 			</div>
 
+			<div class="phone-shade"></div>
+
 		</div>
+
+
 
 		<!-- Header content -->
 		<div class="header-bg">
@@ -71,25 +73,25 @@
 			<div class="row">
 
 				<article class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-0 col-md-3">
-					<img src="" alt="">
+					<img src="img/icon-attendance.svg" alt="Quick Attendance">
 					<h3>Quick Attendance</h3>
 					<p>The most mundane task, now simplified and faster than ever. Take attendance straight into Teechers app.</p>
 				</article>
 
 				<article class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-0 col-md-3">
-					<img src="" alt="">
+					<img src="img/icon-check.svg" alt="Good Grades">
 					<h3>Good Grades</h3>
 					<p>Keep track of all your students’ grades. Review and edit at any moment.</p>
 				</article>
 
 				<article class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-0 col-md-3">
-					<img src="" alt="">
+					<img src="img/icon-phone.svg" alt="Always with You">
 					<h3>Always with You</h3>
 					<p>Don’t mind paper, don’t mind complex systems, keep all your data with you, safe, on your smartphone at all times.</p>
 				</article>
 
 				<article class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-0 col-md-3">
-					<img src="" alt="">
+					<img src="img/icon-file.svg" alt="Easy in - Easy out">
 					<h3>Easy in - Easy out</h3>
 					<p>Import your students’ names in a split, and share your class data just as fast in both PDF and spreadsheet format.</p>
 				</article>
@@ -122,6 +124,7 @@
 				<div class="row">
 
 					<div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4">
+						<a href="mailto:hello@teechersapp.com">Contact Us</a> · 
 						<a href="#">numeral.cc</a>
 					</div>
 
