--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
 
 			<!-- Container: Features -->
-			<section id="features" class="container">
+			<section id="features">
 
 				<!--<div class="row">-->
 
@@ -148,10 +148,8 @@
 				</section>
 
 				<div class="links">
-					<div class="links col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4">
-						<a href="mailto:hello@teechersapp.com">Contact Us</a> · 
-						<a href="#">numeral.cc</a>
-					</div>
+					<a href="mailto:hello@teechersapp.com">Contact Us</a> · 
+					<a href="#">numeral.cc</a>
 				</div>
 
 			</footer>
